--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ yew = { version = "0.20", features = ["csr"] }
 gloo-console = "0.3.0"
 gloo = "0.11.0"
 priority-queue = "2.1.1"
+wasm-bindgen-futures = "0.4.43"
+gloo-timers = { version = "0.3.0", features = ["futures"]} 
